--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,11 +49,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    def camerax_version = "1.1.0-alpha05"
+    def camerax_version = "1.0.2"
+    implementation "androidx.camera:camera-core:1.1.0-alpha11"
+    implementation "androidx.camera:camera-camera2:1.1.0-alpha11"
+    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha11"
+    implementation "androidx.camera:camera-view:1.0.0-alpha31"
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha31"
+    implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
-    implementation "androidx.camera:camera-core:${camerax_version}"
-
-    implementation 'androidx.camera:camera-view:1.0.0-alpha25'
-
 }
