--- a/sdk/java/AndroidManifest.xml
+++ b/sdk/java/AndroidManifest.xml
@@ -4,5 +4,5 @@
       android:versionCode="34160"
       android:versionName="3.4.16">
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="21" />
+    <uses-sdk android:targetSdkVersion="21" />
 </manifest>
